 * Browse by name no longer spits warnings if given part isn't there. #3478

2008-12-08 tdb
 * Use get_plugin_class to determine the Plugin class, fixes #3428
 * Fixed EPrints invalid user errors when starting indexer from apache
 * Fixed double-URLs in RSS2 media output

2008-12-12 tdb
 * Support plugin "tools" in saved searches, fixing #3462

2008-12-12 cjg
 * Fixed IE issues in javascript toggles recently introduced.

======================================================================
EPRINTS-3.1.2
======================================================================

2008-12-19 cjg
 * Fixed incorrect "use" line in MultilineCSV export plugin.

======================================================================
EPRINTS-3.1.2.1
======================================================================

2009-01-16 tdb
 * Strip all whitespace from DOIs & Pubmed IDs, fixing #3439

2009-01-27 tdb
 * Don't encode pathing in files, fixing #3393

2009-01-29 cjg
 * Added ranges for views.
 * Introduced new view configuration format.
 * Updated defaults views.pl to show current config.

2009-02-02 tdb
 * Allow https access to anything under /cgi/, fixing autocomplete scripts

2009-02-11 tdb
 * Unicode Fixes:
 	- Return bytes from LibXML & DOM nodeValue() calls
	- Send bytes via Net::Cmd (fixes wide-character warning)
	- Added utf-8 support to email headers (subject + names)
 * Changed string style to be consistent in Email.pm 

2009-02-13 tdb
 * Added support for custom OAI sets, see #3271

2009-02-18 tdb
 * Added *experimental* FTP daemon (part of Kultur)

2009-02-24 cjg
 * Fixed view group sort unicode issue.

2009-02-26 tdb
 * Fixed OAI GetRecord always returning a record, fixing #3498

2009-03-17 cjg
 * Document toolbox document add now reports document id rather than "OK"
 * Fixed bug in Field::Multi which didn't allow <help> in both the component
    and inside the field.
 * Added temporary conf settings to bin/toolbox to allow file & web import.